[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Space.gd" type="Script" id=1]

[node name="Space" type="Node2D"]
script = ExtResource( 1 )

[node name="IpText" type="LineEdit" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 664.0
margin_top = 392.0
margin_right = 824.0
margin_bottom = 416.0
text = "127.0.0.1"
align = 1

[node name="PortText" type="LineEdit" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 416.0
margin_top = 392.0
margin_right = 496.0
margin_bottom = 416.0
text = "16553"
align = 1

[node name="ClientButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 480.0
margin_top = 520.0
margin_right = 565.0
margin_bottom = 540.0
text = "ClientMode"

[node name="ServerButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 624.0
margin_top = 520.0
margin_right = 712.0
margin_bottom = 540.0
text = "ServerMode"

[node name="StateText" type="Label" parent="."]
visible = false
margin_left = 440.0
margin_top = 432.0
margin_right = 712.0
margin_bottom = 480.0
text = "Loading"
align = 1
valign = 1

[connection signal="pressed" from="ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="ServerButton" to="." method="_on_ServerButton_pressed"]
